Bug 301674 - Binary clock widget should have minimum size
Summary: Binary clock widget should have minimum size
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-clock (other bugs)
Version First Reported In: 4.8.97(RC2)
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL: https://bugs.kde.org/show_bug.cgi?id=...
Keywords:
Depends on:
Blocks: plasmoid-resizing
  Show dependency treegraph
 
Reported: 2012-06-11 18:40 UTC by Janek Bevendorff
Modified: 2012-09-07 21:59 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Janek Bevendorff 2012-06-11 18:40:52 UTC
The Binary Clock widget can be scaled down until it nearly disappears.

Reproducible: Always

Steps to Reproduce:
1. Add the Binary Clock widget to your desktop
2. Scale it down as far as possible

Actual Results:  
There is no scale limitation.

Expected Results:  
Widget should have a sensible minimum size.
Comment 1 stimur 2012-06-28 15:00:29 UTC
sorry, disregard my previous comment it was about digital clock, not binary ...
Comment 2 Reza 2012-07-27 20:44:13 UTC
Git commit 0e46db54c504e08f3db621d1597cf8dd0e2c69f8 by Reza Shah.
Committed on 28/07/2012 at 07:41.
Pushed by rshah into branch 'KDE/4.9'.

increased binary clock applet minimum size for placement at desktop
FIXED-IN: 4.9.0
REVIEW: 105577

M  +2    -2    applets/binary-clock/binaryclock.cpp

http://commits.kde.org/kdeplasma-addons/0e46db54c504e08f3db621d1597cf8dd0e2c69f8
Comment 3 Reza 2012-07-27 20:49:30 UTC
Git commit a333b14dac7323f5a84d79835548c11ae067667f by Reza Shah.
Committed on 28/07/2012 at 07:46.
Pushed by rshah into branch 'master'.

increased binary clock applet minimum size for placement at desktop
FIXED-IN: 4.9.0

M  +2    -2    applets/binary-clock/binaryclock.cpp

http://commits.kde.org/kdeplasma-addons/a333b14dac7323f5a84d79835548c11ae067667f
Comment 4 Albert Astals Cid 2012-07-30 18:55:24 UTC
This is *NOT* fixed in 4.9.0.

Reza read your emails, specially the ones sent to VERY IMPORTANT LISTS like kde-cvs-announce@kde.org
Comment 5 Myriam Schweingruber 2012-09-07 03:21:45 UTC
Which version is this fixed in, 4.9.1 I presume?
Comment 6 Albert Astals Cid 2012-09-07 21:59:36 UTC
yes