increased binary clock applet minimum size for placement at desktop

BUG: 301674
FIXED-IN: 4.9.0
REVIEW: 105577